--- a/app/src/main/res/layout/activity_modifier_profil.xml
+++ b/app/src/main/res/layout/activity_modifier_profil.xml
@@ -1,165 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_lancement"
     android:layout_width="match_parent"
+    android:background="@color/colorBleuClair"
     android:layout_height="match_parent"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true">
-
-    <Button
-        android:id="@+id/button_sauvegarder_profil"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/mybutton"
-        android:text="Sauvegarder"
-        android:textColor="#fff"
-        android:textColorLink="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="30sp" />
+    >
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="vertical"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_centerHorizontal="true">
 
-        <LinearLayout
-            android:id="@+id/linearLayout_barre_menu"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="-30dp"
+            android:paddingTop="0dp"
+            android:text="Modification mot de passe"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="#ffffff"
+            android:textSize="25sp" />
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="50dp">
+
+            <EditText
+                android:id="@+id/editText_ancien_mdp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Entre votrez ancien mot de passe"
+                android:inputType="textPassword"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/editText_password_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Créez votre nouveau mot de passe"
+                android:imeOptions="actionSend"
+                android:inputType="textPassword"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:background="@color/colorBleufFonce"
-            android:elevation="10dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp">
 
-            <TextView
-                android:id="@+id/textMenu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:elevation="0dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="Modification mot de passe"
-                android:textColor="@color/common_google_signin_btn_text_dark_default"
-                android:textSize="30sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="vertical">
-
-            <android.support.design.widget.TextInputLayout
+            <EditText
+                android:id="@+id/editText_password_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
+                android:hint="Confirmez votre nouveau mot de passe"
+                android:imeOptions="actionSend"
+                android:inputType="textPassword"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/editText_ancien_mdp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Entre votrez ancien mot de passe"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="20sp" />
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/button_sauvegarder_profil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/mybutton"
+            android:padding="12dp"
+            android:text="Sauvegarder"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
 
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
-
-                <EditText
-                    android:id="@+id/editText_password_1"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Créez votre nouveau mot de passe"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="20sp" />
-
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
-
-                <EditText
-                    android:id="@+id/editText_password_2"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Confirmez votre nouveau mot de passe"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="20sp" />
-
-
-            </android.support.design.widget.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginRight="12dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
     </LinearLayout>
-
-
 </RelativeLayout>
-
-
-
-
