--- a/app/src/main/res/layout/layout_titre.xml
+++ b/app/src/main/res/layout/layout_titre.xml
@@ -16,26 +16,48 @@
             android:layout_height="50dp"
             android:background="@drawable/icon_disc" />
 
-        <TextView
-            android:id="@+id/textView_info_titre"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
-            android:layout_margin="5dp"
-            android:layout_toEndOf="@+id/image_view_info"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:text="@string/title_activity_test"
-            android:textAppearance="@style/TextAppearance.AppCompat"
-            android:textSize="20sp" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="50dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView_info_titre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/image_view_info"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/title_activity_test"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_info_sous_titre"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/image_view_info"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/title_activity_test"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textColor="@color/colorGrisFonce"
+                android:textSize="12sp" />
+        </LinearLayout>
+
 
         <ImageView
-            android:id="@+id/image_view_player"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
+            android:id="@+id/imageView_anim"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginLeft="-45dp"
             android:layout_marginRight="5dp"
-            android:background="@drawable/icon_play"
+            android:background="@drawable/anim"
             android:foregroundGravity="center_vertical|center_horizontal"
             android:visibility="gone" />
     </LinearLayout>
