--- a/app/src/main/res/layout/activity_ajouter_utilisateur.xml
+++ b/app/src/main/res/layout/activity_ajouter_utilisateur.xml
@@ -1,249 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_lancement"
     android:layout_width="match_parent"
+    android:background="@color/colorBleuClair"
     android:layout_height="match_parent"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true">
-
-    <Button
-        android:id="@+id/button_ajouter_utilisateur"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:background="@drawable/mybutton"
-        android:text="Créer"
-        android:textColor="#fff"
-        android:textColorLink="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="30sp" />
+    >
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/linearLayout_barre_menu"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:background="@color/colorBleufFonce"
-            android:elevation="10dp"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal">
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:text="Création d'un utilisateur"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="#ffffff"
+            android:textSize="25sp" />
 
-            <TextView
-                android:id="@+id/textMenu"
-                android:layout_width="wrap_content"
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp">
+
+            <EditText
+                android:id="@+id/editText_identifiant"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:elevation="0dp"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="Création compte"
-                android:textColor="@color/common_google_signin_btn_text_dark_default"
-                android:textSize="40sp" />
-        </LinearLayout>
+                android:hint="Identifiant"
+                android:inputType="text"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp">
+
+            <EditText
+                android:id="@+id/editText_nom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Nom de l'utilisateur"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp">
+
+            <EditText
+                android:id="@+id/editText_prenom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Prénom de l'utilisateur"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp">
+
+            <EditText
+                android:id="@+id/editText_password_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Mot de passe"
+                android:imeOptions="actionSend"
+                android:inputType="textPassword"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp">
+
+            <EditText
+                android:id="@+id/editText_password_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirmez le mot de passe"
+                android:imeOptions="actionSend"
+                android:inputType="textPassword"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp" />
+        </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:gravity="center_vertical|center_horizontal"
             android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
+            <RadioButton
+                android:id="@+id/radioButton_classique"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="false"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="false"
-                android:gravity="top">
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:checked="false"
+                android:text="Profil utilisateur classique"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textColor="@color/colorGrisClair"
+                android:textSize="20sp" />
 
-                <EditText
-                    android:id="@+id/editText_identifiant"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Choisissez votre identifiant"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="25sp" />
-
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
+            <RadioButton
+                android:id="@+id/radioButton_administrateur"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
-
-                <EditText
-                    android:id="@+id/editText_prenom"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Entrez votre prénom"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="25sp" />
-
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
-
-                <EditText
-                    android:id="@+id/editText_nom"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Entrez votre nom"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="25sp" />
-
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
-
-                <EditText
-                    android:id="@+id/editText_password_2"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Confirmez votre mot de passe"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="25sp" />
-
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true">
-
-                <EditText
-                    android:id="@+id/editText_password_1"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="11dp"
-                    android:layout_marginStart="11dp"
-                    android:layout_weight="1"
-                    android:hint="Créez votre mot de passe"
-                    android:inputType="text"
-                    android:maxLength="10"
-                    android:textColor="#000000"
-                    android:textColorLink="?attr/colorPrimaryDark"
-                    android:textSize="25sp" />
-
-
-            </android.support.design.widget.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_weight="1"
-                    android:text="Type de profil"
-                    android:textSize="25sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginRight="12dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:id="@+id/radioButton_administrateur"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Administrateur"
-                        android:textAppearance="@style/TextAppearance.AppCompat"
-                        android:textColor="@color/colorGrisFonce"
-                        android:textSize="25sp" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton_classique"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Classique"
-                        android:textAppearance="@style/TextAppearance.AppCompat"
-                        android:textColor="@color/colorGrisFonce"
-                        android:textSize="25sp" />
-                </LinearLayout>
-
-            </LinearLayout>
-
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:text="Profil administrateur"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textColor="@color/colorGrisClair"
+                android:textSize="20sp" />
 
         </LinearLayout>
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/button_ajouter_utilisateur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/mybutton"
+            android:padding="10dp"
+            android:text="Ajouter l'utilisateur"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+
     </LinearLayout>
-
-
 </RelativeLayout>
-
-
-
-
