--- a/app/src/main/res/layout/activity_modifier_profil.xml
+++ b/app/src/main/res/layout/activity_modifier_profil.xml
@@ -22,7 +22,8 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="-30dp"
             android:paddingTop="0dp"
-            android:text="Modification mot de passe"
+            android:text="Modification de votre mot de passe"
+            android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat"
             android:textColor="#ffffff"
             android:textSize="25sp" />
@@ -61,7 +62,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp">
