--- a/app/src/main/res/layout/content_activity_emprunter_album_details.xml
+++ b/app/src/main/res/layout/content_activity_emprunter_album_details.xml
@@ -71,11 +71,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Emprunté par JOJO72"
+                android:text="Emprunté par ..."
                 android:textSize="20sp" />
 
 
         </LinearLayout>
+
 
 
         <ListView
