Application des correctifs sur la session utilisateur test sur le scanner qrcode

--- a/app/src/main/res/menu/menu_suppression.xml
+++ b/app/src/main/res/menu/menu_suppression.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_suppression"
         android:orderInCategory="100"
-        android:title="Supprimer"
+        android:title="Supprimer de la CDthèque"
         app:showAsAction="never" />
 </menu>
