Correction d'exportation QRcode modification du test de connexion internet Correction du bug des progressDialog

--- a/app/src/main/res/menu/menu_profil.xml
+++ b/app/src/main/res/menu/menu_profil.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="Modifier le mot de passe"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_a_propos"
+        android:orderInCategory="100"
+        android:title="à propos"
+        app:showAsAction="never" />
 </menu>
