--- a/app/src/main/res/layout/activity_lancement.xml
+++ b/app/src/main/res/layout/activity_lancement.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="v. 17.09.27"
+        android:text="@string/version"
         android:textColor="#ffffff" />
 
     <LinearLayout
